Fixed spelling mistake in main paraghraph.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             old and I am in Grade 7.I love to
             Design.My hobby is Designing. I  
             have two pets one is a Dog the 
-            other one is a Cat.There names 
+            other one is a Cat.Their names 
             are Cindy and Kitty. </b>
      </div>
 
