Added link to my blog.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <li class="logo"><img src="vidul.h.b black logo.jpg"></li>
                 <li>Home</li>
                 <li>About</li>
-                <li>Contacts</li>
+                <li>Contacts</li> 
+                <li><a href="https://vidulhb.blogspot.com/" target="_blank">Blog</a></li>
             </ul>
         </div>
         
