--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="con"><h2><b>Contacts</b></h2></div>
         <div class="iii">
             <ul>
-                <li class="mail"><img src="download (1).png"><div class="gmail"><b>vidul1114@gmail.com</b></div></li>
+                <li class="mail"><img src="gmail.png"><div class="gmail"><b>vidul1114@gmail.com</b></div></li>
                 <li class="phone"><img src="phone.png"><div class="iphone"><b>0718118361</b></div></li>
-                <li class="ad"><img src="gmail.png"><div class="id"><b>215/5 Sudarshana Mawatha Malabe </b></div></li>
+                <li class="ad"><img src="home.png"><div class="id"><b>215/5 Sudarshana Mawatha Malabe </b></div></li>
             </ul>
         </div>
 
