--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
         <div class="con"><h2><b>Contacts</b></h2></div>
         <div class="iii">
             <ul>
-                <li class="mail"><img src="gmail.png"><div class="gmail"><b>vidul1114@gmail.com</b></div></li>
-                <li class="phone"><img src="phone.png"><div class="iphone"><b>0718118361</b></div></li>
-                <li class="ad"><img src="home.png"><div class="id"><b>215/5 Sudarshana Mawatha Malabe </b></div></li>
+                <li class="mail"><img src="icons8-gmail-50.png"><div class="gmail"><b>vidul1114@gmail.com</b></div></li>
+                <li class="phone"><img src="icons8-phone-50.png"><div class="iphone"><b>0718118361</b></div></li>
+                <li class="ad"><img src="icons8-home-50.png"><div class="id"><b>215/5 Sudarshana Mawatha Malabe </b></div></li>
+                <li class="blogger"><img src="icons8-blogger-50.png"><div class="blog"><b>Vidul.H.B </b></div></li>
             </ul>
         </div>
 
 
     </div>
-
 
 </body>
 </html>
