--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div class="con" id="con"><h2><b>Contacts</b></h2></div>
         <div class="iii">
             <ul>
-                <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-50.png"></a><div class="gmail"><b>vidul1114@gmail.com</b></div></li>
-                <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-50.png"></a><div class="iphone"><b>0718118361</b></div></li>
-                <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-50.png"></a><div class="id"><b>215/5 Sudarshana Mawatha Malabe </b></div></li>
-                <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a><div class="blog"><b>Vidul.H.B </b></div></li>
+                <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-50.png"></a></li>
+                <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-50.png"></a></li>
+                <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-50.png"></a></li>
+                <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li>
             </ul>
         </div>
 
