--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="con" id="con"><h2><b>Contacts</b></h2></div>
         <div class="iii">
             <ul>
-                <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-50.png"></a></li>
-                <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-50.png"></a></li>
-                <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-50.png"></a></li>
+                <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-51.png"></a></li>
+                <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-51.png"></a></li>
+                <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
                 <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li>
             </ul>
         </div>
