--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        <div class="hello">
         <h1><b>Hello My Name Is Vidul.H.Batawala</b></h1>
        </div>
+       <div class="yyyy"> hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
 
     </div>
     <section class="background" id="background">
@@ -55,6 +56,12 @@
             other one is a Cat.Their names 
             are Cindy and Kitty. </b>
      </div>
+     <div class="ooo">
+         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+
+     </div>
 
     </div>
     <div class="ddd">
@@ -64,7 +71,8 @@
                 <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-51.png"></a></li>
                 <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-51.png"></a></li>
                 <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
-                <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li>
+                <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
+                <li class="github"><a href="https://github.com/VidulHB/vidulhb.github.io" target="_blank"><img src="icons8-github-50.png"></a></li>
             </ul>
         </div>
 
