--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="card"><img src="vasak card - Edited.jpg"></div> 
           <div class="acst"><img src="ACST FB Cover - Edited.jpg"></div>
                <div class="www">
-                 <b> My products desing's in zazzle</b> <a href="https://www.zazzle.com/store/v1i1d1u4l" target="_blank"><div class="vhb"><b>V.H.B Stores</b></div></a>
+                 <b> My products desing's in zazzle</b> <a href="https://www.zazzle.com/store/v1i1d1u4l" target="_blank"><b>V.H.B Stores</b></a>
                </div>
          <div class="edit"><img src="vidul certificate - Edited.jpg"></div> 
          <div class="pc"><img src="Gaming PC Design - Edited.png"></div>
@@ -59,7 +59,7 @@
      <div class="ooo">
          hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
          hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
-         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
 
      </div>
 
