--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
                 <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
                 <li class="github"><a href="https://github.com/VidulHB/vidulhb.github.io" target="_blank"><img src="icons8-github-50.png"></a></li>
+                <li class="youtube"><a href="https://www.youtube.com/channel/UCtz3pbjZVputPD8kaSvuong/featured?view_as=subscriber" target="_blank"><img src="icons8-play-button-50.png"></a></li>
             </ul>
         </div>
 
