--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
                 <li class="github"><a href="https://github.com/VidulHB/vidulhb.github.io" target="_blank"><img src="icons8-github-50.png"></a></li>
                 <li class="youtube"><a href="https://www.youtube.com/channel/UCtz3pbjZVputPD8kaSvuong/featured?view_as=subscriber" target="_blank"><img src="icons8-play-button-50.png"></a></li>
+                <li class="instagram"><a href="https://www.instagram.com/vidul.h.b/" target="_blank"><img src="icons8-instagram-50.png"></a></li>
             </ul>
         </div>
 
