html , css , images

--- a/myfamily.html
+++ b/myfamily.html
@@ -16,12 +16,77 @@
                 <li><div class="ba" ><a href="index.html" >Home</a></div></li> 
                 <li><div class="bl"><a href="mywork.html">My Work</a></div></li>
                 <li><div class="co"><a href="about.html">About</a></div></li>
-                <li><div class="abo"><a href="comment.html">Comments</a></div></li>
                 
 
             </ul>
         </div>
    </div> 
+   <div class="Grandfarthers">
+       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+       <h2>My Grandfarthers</h2>
+       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+       <div class="edwi">
+           <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+           <img class="edw" src="edwin.jfif"> 
+           <h2>Edwin Batawala</h2>
+           <h3>(1942-2018)</h3>
+           My Farther's Farther is Edwin Batawala. He was a fanous artist 
+       </div>
+       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div> 
+       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+       <div class="idda">
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <img class="lll" src="ggg.jpg">
+         <h2>Jinadasa Iddamaldeniye </h2>
+         <h3>(1946-2019)</h3>
+
+
+        </div>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <h2>My Grandmothers</h2>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="lll" src="fffff.jpg">
+            <h2></h2>
+
+        </div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="lll" src="hhhhh.jpg">
+            <h2></h2>
+            <h3>(1946-2018)</h3>
+
+        </div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <h2>My Mother</h2>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="cccc" src="sam.jpg">
+            <h2>Samantha Iddamaldeniye</h2>
+
+
+        </div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <h2>My Farther</h2>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="lll" src="ama.jpg">
+            <h2>Amal Batawala</h2>
+        </div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <h2>My Brother</h2>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="lll" src="inuka.jpg">
+            <h2>Inuka Batawala</h2>
+        </div>
+
+   </div>
         <div class="ddd">
             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
             <div class="con" id="con"><h2><b>Contacts</b></h2></div>
