--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><div class="ba" ><a href="mywork.html" >My Work</a></div></li> 
                 <li><div class="bl"><a href="myfamily.html">My Family</a></div></li>
                 <li><div class="abo"><a href="about.html">About</a></div></li>
-                
+                <li><div class="co"><a href="https://vidulhb.rocket.chat/" target="_blank">Chat</a></div></li>
                 
 
             </ul>
