--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                 <li><div class="ba" ><a href="index.html">Home</a></div></li> 
                 <li><div class="bl"><a href="mywork.html">My Work</a></div></li>
                 <li><div class="abo"><a href="myfamily.html">My Family</a></div></li> 
+                <li><div class="co"><a href="https://vidulhb.rocket.chat/" target="_blank">Chat</a></div></li>
                 
             </ul>
         </div>
