--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
     <title>V.H.B.Website</title>
     <link rel="icon"  href="vidul.h.b black logo.jpg">
     <link rel="stylesheet" href="home.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body a link="white" vlink="white">
-    <div class="container">
-        <div class="menu">
-            <ul>
-                <li class="logo" ><a href="https://vidulhb.github.io/"><img src="vidul.h.b black logo.jpg" ></a></li>
-                <li><div class="ba" ><a href="mywork.html" >My Work</a></div></li> 
-                <li><div class="bl"><a href="myfamily.html">My Family</a></div></li>
-                <li><div class="abo"><a href="about.html">About</a></div></li>
-                <li><div class="co"><a href="https://vidulhb.rocket.chat/" target="_blank">Chat</a></div></li>
-                
+    <div class="nav">
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
 
-            </ul>
-        </div>
-   </div>  
+
+  
+        <ul>
+         <li><a class="ba" href="mywork.html">My work</a></li>
+         <li><a class="bl" href="myfamily.html">My Family</a></li>
+         <li><a class="abo" href="about.html">About</a></li>
+         <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
+        </ul>
+    </div>
+   <section> 
       <div class="vidul1114">  
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div> 
@@ -32,8 +37,34 @@
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
         <div class="hello"><h1><b>Hello My Name Is Vidul.H.Batawala.</b></h1> </div>
       </div>
-  
+  </section>
+  <div class="ddd">
+      <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+      <div class="con" id="con"><h2><b>Contacts</b></h2></div>
+      <div class="iii">
+        <ul class="connn">
+            <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-51.png"></a></li>
+            <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-51.png"></a></li>
+            <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
+       </ul>  
+       <ul class="connnn"> 
+            <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
+            <li class="github"><a href="https://github.com/VidulHB" target="_blank"><img src="icons8-github-50.png"></a></li>
+            <li class="youtube"><a href="https://www.youtube.com/channel/UCtz3pbjZVputPD8kaSvuong/featured?view_as=subscriber" target="_blank"><img src="icons8-play-button-50.png"></a></li>
+        </ul>
+        <ul class="connnnn">    
+            <li class="instagram"><a href="https://www.instagram.com/vidul.h.b/" target="_blank"><img src="icons8-instagram-50.png"></a></li>
+            <li class="twitter"><a href="https://twitter.com/HVidul" target="_blank"><img src="icons8-twitter-circled-50.png"></a></li>
+        </ul>
+      </div>
+      <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+   </div>
+
 </body>
 </html>
