--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viweport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-comatible" content="ie-edge">
-    <title>V.H.B.Website</title>
-    <link rel="icon"  href="vidul.h.b black logo.jpg">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>V.H.B Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="vidul.h.b black logo.jpg">
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-
-<body a link="white" vlink="white">
+  </head>
+  <body alink="white" vlink="white">
     <div class="nav">
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-          <i class="fas fa-bars"></i>
-        </label>
-        <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
 
-
-  
-        <ul>
-         <li><a class="ba" href="mywork.html">My work</a></li>
-         <li><a class="bl" href="myfamily.html">My Family</a></li>
-         <li><a class="abo" href="about.html">About</a></li>
-         <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
-        </ul>
+      <ul>
+       <li><a class="ba" href="myfamily.html">My work</a></li>
+       <li><a class="bl" href="mywork.html">My Family</a></li>
+       <li><a class="abo" href="about.html">About</a></li>
+       <li><a class="co" href="index.html">Chat</a></li>
+     </ul>
     </div>
-   <section> 
+    <section> 
       <div class="vidul1114">  
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div> 
