--- a/myfamily.html
+++ b/myfamily.html
@@ -1,121 +1,113 @@
 <!DOCTYPE html>
-<html>
-    <head>    
-        <meta charset="UTF-8">
-        <meta name="viweport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-comatible" content="ie-edge">
-        <title>V.H.B.Website</title>
-        <link rel="icon" href="vidul.h.b black logo.jpg">
-        <link rel="stylesheet" href="index.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    </head>
-    <body a link="white" vlink="white"> 
-        <div class="nav">
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-            <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
-      
-            <ul>
-              <li><a class="ba" href="index.html">Home</a></li>
-              <li><a class="bl" href="mywork.html">My Work</a></li>
-              <li><a class="abo" href="about.html">About</a></li>
-                <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
-          </ul>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>V.H.B Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="vidul.h.b black logo.jpg">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body alink="white" vlink="white">
+    <div class="nav">
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
+
+      <ul>
+       <li><a class="ba" href="myfamily.html">My work</a></li>
+       <li><a class="bl" href="mywork.html">My Family</a></li>
+       <li><a class="abo" href="about.html">About</a></li>
+       <li><a class="co" href="index.html">Chat</a></li>
+     </ul>
+    </div>
+    <div class="Grandfarthers">
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <h2>My Grandfarthers</h2>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+            <img class="edw" src="edwin.jfif"> 
+            <h2>Edwin Batawala</h2>
+            <h3>(1942-2018)</h3>
+            My Farther's Farther is Edwin Batawala. He was a fanous artist 
         </div>
-
-
-   <div class="Grandfarthers">
-       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-       <h2>My Grandfarthers</h2>
-       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-       <div class="edwi">
-           <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-           <img class="edw" src="edwin.jfif"> 
-           <h2>Edwin Batawala</h2>
-           <h3>(1942-2018)</h3>
-           My Farther's Farther is Edwin Batawala. He was a fanous artist 
-       </div>
-       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div> 
-       <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-       <div class="edwi">
-         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-         <img class="lll" src="ggg.jpg">
-         <h2>Jinadasa Iddamaldeniye </h2>
-         <h3>(1946-2019)</h3>
-
-
-        </div>
-         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-         <h2>My Grandmothers</h2>
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div> 
+        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+        <div class="edwi">
+          <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+          <img class="lll" src="ggg.jpg">
+          <h2>Jinadasa Iddamaldeniye </h2>
+          <h3>(1946-2019)</h3>
+ 
+ 
+         </div>
+          <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+          <h2>My Grandmothers</h2>
+          <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+          <div class="edwi">
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <img class="lll" src="fffff.jpg">
+             <h2></h2>
+ 
+         </div>
          <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
          <div class="edwi">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <img class="lll" src="fffff.jpg">
-            <h2></h2>
-
-        </div>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <div class="edwi">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <img class="lll" src="hhhhh.jpg">
-            <h2></h2>
-            <h3>(1946-2018)</h3>
-
-        </div>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <h2>My Mother</h2>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <div class="edwi">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <img class="cccc" src="sam.jpg">
-            <h2>Samantha Iddamaldeniye</h2>
-
-
-        </div>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <h2>My Farther</h2>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <div class="edwi">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <img class="lll" src="ama.jpg">
-            <h2>Amal Batawala</h2>
-        </div>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <h2>My Brother</h2>
-        <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        <div class="edwi">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <img class="lll" src="inuka.jpg">
-            <h2>Inuka Batawala</h2>
-        </div>
-  </div>
-        <div class="ddd">
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-            <div class="con" id="con"><h2><b>Contacts</b></h2></div>
-            <div class="iii">
-                <ul class="connn">
-                    <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-51.png"></a></li>
-                    <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-51.png"></a></li>
-                    <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
-               </ul>  
-               <ul class="connnn"> 
-                    <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
-                    <li class="github"><a href="https://github.com/VidulHB" target="_blank"><img src="icons8-github-50.png"></a></li>
-                    <li class="youtube"><a href="https://www.youtube.com/channel/UCtz3pbjZVputPD8kaSvuong/featured?view_as=subscriber" target="_blank"><img src="icons8-play-button-50.png"></a></li>
-                </ul>
-                <ul class="connnnn">    
-                    <li class="instagram"><a href="https://www.instagram.com/vidul.h.b/" target="_blank"><img src="icons8-instagram-50.png"></a></li>
-                    <li class="twitter"><a href="https://twitter.com/HVidul" target="_blank"><img src="icons8-twitter-circled-50.png"></a></li>
-                </ul>
-            </div>
-            <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-        </div>
-         
-
-
-
-
-    </body>
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <img class="lll" src="hhhhh.jpg">
+             <h2></h2>
+             <h3>(1946-2018)</h3>
+ 
+         </div>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <h2>My Mother</h2>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <div class="edwi">
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <img class="cccc" src="sam.jpg">
+             <h2>Samantha Iddamaldeniye</h2>
+ 
+ 
+         </div>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <h2>My Farther</h2>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <div class="edwi">
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <img class="lll" src="ama.jpg">
+             <h2>Amal Batawala</h2>
+         </div>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <h2>My Brother</h2>
+         <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         <div class="edwi">
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <img class="lll" src="inuka.jpg">
+             <h2>Inuka Batawala</h2>
+         </div>
+   </div>
+         <div class="ddd">
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+             <div class="con" id="con"><h2><b>Contacts</b></h2></div>
+             <div class="iii">
+                 <ul class="connn">
+                     <li class="mail"><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCHrjDTXMZtqLKtNjKtlrCJjJmHrztskkrlXWfCSsfCJgPdsgXRcNPqtvmZFBgZrBgkQvJxV" target="_blank"><img src="icons8-gmail-51.png"></a></li>
+                     <li class="phone"><a href="tel:0718118361"><img src="icons8-phone-51.png"></a></li>
+                     <li class="ad"><a href="https://goo.gl/maps/cEGdQLkV9iFH5orF8" target="_blank"><img src="icons8-home-address-50.png"></a></li>
+                </ul>  
+                <ul class="connnn"> 
+                     <li class="blogger"><a href="https://vidulhb.blogspot.com/" target="_blank"><img src="icons8-blogger-50.png"></a></li> 
+                     <li class="github"><a href="https://github.com/VidulHB" target="_blank"><img src="icons8-github-50.png"></a></li>
+                     <li class="youtube"><a href="https://www.youtube.com/channel/UCtz3pbjZVputPD8kaSvuong/featured?view_as=subscriber" target="_blank"><img src="icons8-play-button-50.png"></a></li>
+                 </ul>
+                 <ul class="connnnn">    
+                     <li class="instagram"><a href="https://www.instagram.com/vidul.h.b/" target="_blank"><img src="icons8-instagram-50.png"></a></li>
+                     <li class="twitter"><a href="https://twitter.com/HVidul" target="_blank"><img src="icons8-twitter-circled-50.png"></a></li>
+                 </ul>
+             </div>
+             <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
+         </div>
+</body>
 </html>
