--- a/mywork.html
+++ b/mywork.html
@@ -17,10 +17,10 @@
       <label class="logo"><img src="vidul.h.b black logo.jpg"></label>
 
       <ul>
-       <li><a class="ba" href="myfamily.html">My work</a></li>
-       <li><a class="bl" href="mywork.html">My Family</a></li>
+       <li><a class="ba" href="index.html">Home</a></li>
+       <li><a class="bl" href="myfamily.html">My Family</a></li>
        <li><a class="abo" href="about.html">About</a></li>
-       <li><a class="co" href="index.html">Chat</a></li>
+       <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
      </ul>
     </div>
     <section class="background" id="background">
