html , css and js

--- a/myfamily.html
+++ b/myfamily.html
@@ -2,13 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>V.H.B Home</title>
+    <title>V.H.B My family</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="vidul.h.b black logo.jpg">
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body alink="white" vlink="white">
+    
+
+    <div class="loading-container loader_bg">
+       <div class="container">
+             <div class="dot dot1"></div>
+             <div class="dot dot2"></div>
+       <div class="dot dot3"></div>
+       <div class="dot dot4"></div>
+       <div class="dot dot5"></div>
+       <div class="dot dot6"></div>
+     </div>
+     <div class="container">
+             <div class="dot dot1"></div>
+             <div class="dot dot2"></div>
+       <div class="dot dot3"></div>
+       <div class="dot dot4"></div>
+       <div class="dot dot5"></div>
+       <div class="dot dot6"></div>
+     </div>
+     <div class="container">
+             <div class="dot dot1"></div>
+             <div class="dot dot2"></div>
+       <div class="dot dot3"></div>
+       <div class="dot dot4"></div>
+       <div class="dot dot5"></div>
+       <div class="dot dot6"></div>
+         </div>
+    </div>
+         
+ 
     <div class="nav">
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
@@ -18,7 +49,7 @@
 
       <ul>
        <li><a class="ba" href="index.html">Home</a></li>
-       <li><a class="bl" href="myfamily.html">My Family</a></li>
+       <li><a class="bl" href="mywork.html">My Work</a></li>
        <li><a class="abo" href="about.html">About</a></li>
        <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
      </ul>
@@ -108,6 +139,9 @@
                  </ul>
              </div>
              <div class="bbbbb">hhhhhhhhhhhhhhhhh</div>
-         </div>
+         </div>    
+ 
+ <script src="js.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </body>
 </html>
