--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
        <li><a class="ba" href="index.html">Home</a></li>
        <li><a class="bl" href="mywork.html">My Work</a></li>
        <li><a class="abo" href="myfamily.html">My Family</a></li>
-       <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
+       <li><a class="co" href="https://discord.gg/mZbeyP">Chat</a></li>
      </ul>
     </div>
     <div class="abc">
