--- a/mywork.html
+++ b/mywork.html
@@ -55,7 +55,7 @@
        <li><a class="ba" href="index.html">Home</a></li>
        <li><a class="bl" href="myfamily.html">My Family</a></li>
        <li><a class="abo" href="about.html">About</a></li>
-       <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
+       <li><a class="co" href="https://discord.gg/SwMR9Me">Chat</a></li>
      </ul>
     </div>
     <section class="background" id="background">
