--- a/myfamily.html
+++ b/myfamily.html
@@ -51,7 +51,7 @@
        <li><a class="ba" href="index.html">Home</a></li>
        <li><a class="bl" href="mywork.html">My Work</a></li>
        <li><a class="abo" href="about.html">About</a></li>
-       <li><a class="co" href="https://vidulhb.rocket.chat/">Chat</a></li>
+       <li><a class="co" href="https://discord.gg/SwMR9Me">Chat</a></li>
      </ul>
     </div>
     <div class="Grandfarthers">
